--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
-#container .notebox p {
+#container 
+.notebox p {
 }
 body {
 	font-family:Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
@@ -16,6 +17,6 @@ h1 {
 	float: right;
 }
 
-.highlight {
+.article {
 
 }
